--- a/SourceCode/2023/August2023/Swapna/Task 1/Main.xaml
+++ b/SourceCode/2023/August2023/Swapna/Task 1/Main.xaml
@@ -83,6 +83,6 @@
         <OutArgument x:TypeArguments="x:String">[Input]</OutArgument>
       </ui:InputDialog.Result>
     </ui:InputDialog>
-    <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="388,85" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;Hi &quot;+Input+ &quot; Welcome to UiPath&quot;]" />
+    <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Output" sap:VirtualizedContainerService.HintSize="388,85" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;Hi &quot;+Input+ &quot; Welcome to UiPath&quot;]" />
   </Sequence>
 </Activity>
