--- a/SourceCode/2023/August2023/Gowthami/Task1/Main.xaml
+++ b/SourceCode/2023/August2023/Gowthami/Task1/Main.xaml
@@ -85,6 +85,6 @@
         <OutArgument x:TypeArguments="x:String">[input]</OutArgument>
       </ui:InputDialog.Result>
     </ui:InputDialog>
-    <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="388,85" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;Hi &quot;+ input  + &quot; Welcome to UI Path &quot;]" />
+    <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Welcome Message" sap:VirtualizedContainerService.HintSize="388,85" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;Hi &quot;+ input  + &quot; Welcome to UI Path &quot;]" />
   </Sequence>
 </Activity>
