--- a/SourceCode/2023/August2023/Gowthami/Task2/Main.xaml
+++ b/SourceCode/2023/August2023/Gowthami/Task2/Main.xaml
@@ -79,17 +79,17 @@
         <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" DisplayName="Number1" sap:VirtualizedContainerService.HintSize="388,239" sap2010:WorkflowViewState.IdRef="InputDialog_2" IsPassword="False" Label="Enter Your First Number" Title="Enter Your Number">
+    <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" DisplayName="Provide Number1" sap:VirtualizedContainerService.HintSize="388,239" sap2010:WorkflowViewState.IdRef="InputDialog_2" IsPassword="False" Label="Enter Your First Number" Title="Enter Your Number">
       <ui:InputDialog.Result>
         <OutArgument x:TypeArguments="x:Int32">[Num1]</OutArgument>
       </ui:InputDialog.Result>
     </ui:InputDialog>
-    <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" DisplayName="Number2" sap:VirtualizedContainerService.HintSize="388,239" sap2010:WorkflowViewState.IdRef="InputDialog_3" IsPassword="False" Label="Enter Your Second Number" Title="Enter Your Number">
+    <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" DisplayName="Provide Number2" sap:VirtualizedContainerService.HintSize="388,239" sap2010:WorkflowViewState.IdRef="InputDialog_3" IsPassword="False" Label="Enter Your Second Number" Title="Enter Your Number">
       <ui:InputDialog.Result>
         <OutArgument x:TypeArguments="x:Int32">[Num2]</OutArgument>
       </ui:InputDialog.Result>
     </ui:InputDialog>
-    <ui:LogMessage DisplayName="Subtraction-Log Msg" sap:VirtualizedContainerService.HintSize="388,141" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[Num1-Num2]" />
-    <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Sub of Numbers-Msg Box" sap:VirtualizedContainerService.HintSize="388,85" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[Num1- Num2]" />
+    <ui:LogMessage DisplayName="Subtraction Of Two Numbers" sap:VirtualizedContainerService.HintSize="388,141" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[Num1-Num2]" />
+    <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Display the Result" sap:VirtualizedContainerService.HintSize="388,85" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[Num1- Num2]" />
   </Sequence>
 </Activity>
